--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ span {
 
 	31%,
 	60% {
-		content: " Développeur Front-end";
+		content: " Développeur Front-End";
 	}
 
 	61%,
@@ -259,7 +259,7 @@ span {
 
 	81%,
 	100% {
-		content: " Développeur Back-end";
+		content: " Développeur Back-End";
 	}
 
 }
